# opam-bundle

./: .gitignore  .travis.yml  CHANGES.md  Makefile  README.md  crunch.ml  dune  dune-project  opam  opam-bundle.opam  opamBundleMain.ml
.github/workflows/: main.yml
scripts/: bundle_all_test.sh
shell/: bootstrap.sh  bundle_all_test.sh  common.sh  compile.sh  configure.sh  self_extract.sh  uncompress.sh
src/: dune  opamBundleMain.ml
test/: dune
test/dummy.t/: run.t
test/dummy/basic.t/: run.t
test/dummy/env.t/: run.t
test/dummy/packages.t/: run.t
test/dummy/repos.t/: run.t
test/real/odoc.t/: run.t
test/real/opam-bundle.t/: run.t
tests/: dune
tests/real/: odoc.t  opam-bundle.t
tests/stub/: basic.t  env.t  packages.t  repos.t
