opam-version: "2.0"
name: "opam-bundle"
version: "0.4"
maintainer: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
authors: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
license: "GPL-3.0-only"
tags: "org:ocamlpro"
homepage: "https://github.com/AltGr/opam-bundle"
bug-reports: "https://github.com/AltGr/opam-bundle/issues"
depends: [
  "ocaml" {build}
  "ocamlfind" {build}
  "dune" {build & >= "2.8.5"}
  "cmdliner" {build & >= "1.1.0"}
  "opam-client" {build & >= "2.1.0"}
]
build: [ "dune" "build" "-j" jobs "-p" name "@runtest" {with-test} ]
dev-repo: "git+https://github.com/AltGr/opam-bundle"
flags: plugin
synopsis: "A tool that creates stand-alone source bundles from opam packages"
description: """
opam-bundle is a command-line tool that, given a selection of packages,
generates a .tar.gz (and optionally a self-extracting) archive containing their
sources, and everything needed to bootstrap and compile them:
- the sources of their dependencies
- the sources of the chosen version of OCaml
- the sources of opam
- a set of scripts to bootstrap, check and install external dependencies,
  compile all the above, install the packages within a sandbox, and optionally
  put wrapper scripts within your PATH

This is expected to be done as normal user, with constrained calls to `sudo`
when needed for depexts and wrappers installation.
"""
